   HADOOP-2161 getRow() is orders of magnitudes slower than get(), even on rows
               with one column (Clint Morgan and Stack)
   HADOOP-2040 Hudson hangs AFTER test has finished
   HADOOP-2274 Excess synchronization introduced by HADOOP-2139 negatively
               impacts performance
   HADOOP-2196 Fix how hbase sits in hadoop 'package' product

  IMPROVEMENTS
    HADOOP-2401 Add convenience put method that takes writable
                (Johan Oskarsson via Stack)
    HADOOP-2074 Simple switch to enable DEBUG level-logging in hbase
    HADOOP-2088 Make hbase runnable in $HADOOP_HOME/build(/contrib/hbase)
    HADOOP-2126 Use Bob Jenkins' hash for bloom filters
    HADOOP-2157 Make Scanners implement Iterable
    HADOOP-2176 Htable.deleteAll documentation is ambiguous
    HADOOP-2139 (phase 1) Increase parallelism in region servers.
    HADOOP-2267 [Hbase Shell] Change the prompt's title from 'hbase' to 'hql'.
    HADOOP-2139 (phase 2) Make region server more event driven
    HADOOP-2289 Useless efforts of looking for the non-existant table in select
                command.

Release 0.15.1
Branch 0.15

  INCOMPATIBLE CHANGES
    HADOOP-1931 Hbase scripts take --ARG=ARG_VALUE when should be like hadoop
                and do ---ARG ARG_VALUE

  NEW FEATURES
    HADOOP-1768 FS command using Hadoop FsShell operations
                (Edward Yoon via Stack)
    HADOOP-1784 Delete: Fix scanners and gets so they work properly in presence
                of deletes. Added a deleteAll to remove all cells equal to or
                older than passed timestamp.  Fixed compaction so deleted cells
                do not make it out into compacted output.  Ensure also that
                versions > column max are dropped compacting.
    HADOOP-1720 Addition of HQL (Hbase Query Language) support in Hbase Shell.
                The old shell syntax has been replaced by HQL, a small SQL-like